--- a/app/src/main/res/layout/fragment_home_account.xml
+++ b/app/src/main/res/layout/fragment_home_account.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@color/toolbarColor"
+              android:background="@color/colorPrimary"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/account_list_view"
-        android:divider="@color/lineDividerColor"
-        android:dividerHeight="0.3dp"
-        android:scrollbars="none"
+
+    <TextView
+        android:layout_marginTop="25dp"
+        android:text="@string/account"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize" />
+    <android.support.v7.widget.RecyclerView
+        android:paddingBottom="72dp"
+        android:id="@+id/account_list"
+        android:background="@color/toolbarColor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
