--- a/app/src/main/res/layout/fragment_home_me.xml
+++ b/app/src/main/res/layout/fragment_home_me.xml
@@ -1,142 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@color/toolbarColor"
+              android:background="@color/colorPrimary"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+   <TextView
+       android:layout_marginTop="25dp"
+       android:text="@string/home_mine_bottom_button"
+       android:textSize="18sp"
+       android:gravity="center"
+       android:textColor="@android:color/white"
+       android:layout_width="match_parent"
+       android:layout_height="?attr/actionBarSize"/>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1"
+       android:background="@color/toolbarColor"
+       android:orientation="vertical">
 
-   <View
-       android:layout_width="match_parent"
-       android:layout_marginTop="32dp"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
-   <RelativeLayout
-       android:id="@+id/relative_layout_login"
-       android:background="@drawable/item_click_selector"
-       android:padding="@dimen/activity_margin"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-      <TextView
-          android:id="@+id/login_right_now_textview"
-          android:textSize="28sp"
-          android:textColor="@android:color/black"
-          android:text="@string/login_right_now"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-      <TextView
-          android:layout_below="@id/login_right_now_textview"
-          android:text="@string/login_tips"
-          android:textColor="@color/text_tips_color"
-          android:textSize="@dimen/s_normal_size"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-   </RelativeLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_marginTop="32dp"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
+      <RelativeLayout
+          android:id="@+id/relative_layout_login"
+          android:background="@drawable/item_click_selector"
+          android:padding="@dimen/activity_margin"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+         <TextView
+             android:id="@+id/login_right_now_textview"
+             android:textSize="28sp"
+             android:textColor="@android:color/black"
+             android:text="@string/login_right_now"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+         <TextView
+             android:layout_below="@id/login_right_now_textview"
+             android:text="@string/login_tips"
+             android:textColor="@color/text_tips_color"
+             android:textSize="@dimen/s_normal_size"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+      </RelativeLayout>
 
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
 
-   <RelativeLayout
-       android:id="@+id/relative_layout_expend_type_manager"
-       android:background="@drawable/item_click_selector"
-       android:paddingStart="@dimen/activity_margin"
-       android:paddingEnd="@dimen/activity_margin"
-       android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize">
-      <TextView
-          android:layout_centerVertical="true"
-          android:text="@string/expend_type_manager"
-          android:textSize="16sp"
-          android:textColor="@android:color/black"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-      <ImageView
-          android:layout_centerVertical="true"
-          android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-   </RelativeLayout>
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
+      <RelativeLayout
+          android:id="@+id/relative_layout_expend_type_manager"
+          android:background="@drawable/item_click_selector"
+          android:paddingStart="@dimen/activity_margin"
+          android:paddingEnd="@dimen/activity_margin"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize">
+         <TextView
+             android:layout_centerVertical="true"
+             android:text="@string/expend_type_manager"
+             android:textSize="16sp"
+             android:textColor="@android:color/black"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+         <ImageView
+             android:layout_centerVertical="true"
+             android:layout_alignParentEnd="true"
+             android:layout_alignParentRight="true"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+      </RelativeLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
 
-   <RelativeLayout
-       android:id="@+id/relative_layout_income_type_manager"
-       android:background="@drawable/item_click_selector"
-       android:paddingStart="@dimen/activity_margin"
-       android:paddingEnd="@dimen/activity_margin"
-       android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize">
-      <TextView
-          android:layout_centerVertical="true"
-          android:text="@string/income_type_manager"
-          android:textSize="16sp"
-          android:textColor="@android:color/black"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-      <ImageView
-          android:layout_centerVertical="true"
-          android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-   </RelativeLayout>
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
+      <RelativeLayout
+          android:id="@+id/relative_layout_income_type_manager"
+          android:background="@drawable/item_click_selector"
+          android:paddingStart="@dimen/activity_margin"
+          android:paddingEnd="@dimen/activity_margin"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize">
+         <TextView
+             android:layout_centerVertical="true"
+             android:text="@string/income_type_manager"
+             android:textSize="16sp"
+             android:textColor="@android:color/black"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+         <ImageView
+             android:layout_centerVertical="true"
+             android:layout_alignParentEnd="true"
+             android:layout_alignParentRight="true"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+      </RelativeLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
 
-   <RelativeLayout
-       android:id="@+id/question_feedback"
-       android:background="@drawable/item_click_selector"
-       android:paddingStart="@dimen/activity_margin"
-       android:paddingEnd="@dimen/activity_margin"
-       android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize">
-      <TextView
-          android:layout_centerVertical="true"
-          android:text="@string/question_feed_back"
-          android:textSize="16sp"
-          android:textColor="@android:color/black"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-      <ImageView
-          android:layout_centerVertical="true"
-          android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-   </RelativeLayout>
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
-   <RelativeLayout
-       android:id="@+id/relative_layout_setting"
-       android:background="@drawable/item_click_selector"
-       android:paddingStart="@dimen/activity_margin"
-       android:paddingEnd="@dimen/activity_margin"
-       android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize">
-      <TextView
-          android:layout_centerVertical="true"
-          android:text="@string/home_mine_settings"
-          android:textSize="16sp"
-          android:textColor="@android:color/black"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-      <ImageView
-          android:layout_centerVertical="true"
-          android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
-   </RelativeLayout>
-   <View
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/divider_line_height"
-       android:background="@color/divider_line_color"/>
+      <RelativeLayout
+          android:id="@+id/question_feedback"
+          android:background="@drawable/item_click_selector"
+          android:paddingStart="@dimen/activity_margin"
+          android:paddingEnd="@dimen/activity_margin"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize">
+         <TextView
+             android:layout_centerVertical="true"
+             android:text="@string/question_feed_back"
+             android:textSize="16sp"
+             android:textColor="@android:color/black"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+         <ImageView
+             android:layout_centerVertical="true"
+             android:layout_alignParentEnd="true"
+             android:layout_alignParentRight="true"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+      </RelativeLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
+      <RelativeLayout
+          android:id="@+id/relative_layout_setting"
+          android:background="@drawable/item_click_selector"
+          android:paddingStart="@dimen/activity_margin"
+          android:paddingEnd="@dimen/activity_margin"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize">
+         <TextView
+             android:layout_centerVertical="true"
+             android:text="@string/home_mine_settings"
+             android:textSize="16sp"
+             android:textColor="@android:color/black"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+         <ImageView
+             android:layout_centerVertical="true"
+             android:layout_alignParentEnd="true"
+             android:layout_alignParentRight="true"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+      </RelativeLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/divider_line_height"
+          android:background="@color/divider_line_color"/>
+
+   </LinearLayout>
 </LinearLayout>
