--- a/app/src/main/res/drawable/date_flag_circle.xml
+++ b/app/src/main/res/drawable/date_flag_circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <size android:width="?actionBarSize" android:height="?actionBarSize"/>
+    <size android:width="108dp" android:height="108dp"/>
     <solid android:color="@color/colorPrimary"/>
     <padding
         android:left="4dp"
@@ -9,5 +9,5 @@
         android:bottom="2dp" />
     <stroke
         android:width="4dp"
-        android:color="#7d7a84" />
+        android:color="#EEEEEE" />
 </shape>
