--- a/app/src/main/res/layout/layout_account_item.xml
+++ b/app/src/main/res/layout/layout_account_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    app:cardUseCompatPadding="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
@@ -57,6 +58,6 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
 
