--- a/app/src/main/res/layout/layout_choose_date.xml
+++ b/app/src/main/res/layout/layout_choose_date.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/choose_user_account_title"
         android:gravity="center"
-        android:text="选择时间"
+        android:text="@string/choose_time"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
