--- a/app/src/main/res/layout/layout_custom_toast.xml
+++ b/app/src/main/res/layout/layout_custom_toast.xml
@@ -11,6 +11,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="@dimen/activity_margin"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:shadowColor="@android:color/white"
         android:shadowRadius="2.75" />
