add ReadMe and homeView preview image

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,9 +40,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/account_total_amount"
                     android:layout_marginTop="@dimen/text_padding"
                     android:textStyle="bold"
-                    android:text="￥23034034"
+                    android:text="0"
                     android:textColor="@android:color/white"
                     android:textSize="32sp"
                     android:layout_width="wrap_content"
@@ -87,6 +88,7 @@
 
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/today_expend"
                     android:layout_gravity="center_horizontal"
                     android:text="今日已花费12元"
                     android:textSize="14sp"
@@ -125,6 +127,7 @@
 
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/month_expend"
                     android:layout_gravity="center_horizontal"
                     android:text="本月已花费 1238.64 元"
                     android:textSize="14sp"
